--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -56,6 +57,10 @@
             android:exported="false"
             android:label="Reset Password"
             android:theme="@style/Theme.KeepYFitness" />
+        <activity android:name=".ExerciseListActivity" android:exported="true" />
+        <activity android:name=".ScheduleListActivity" android:exported="true" />
+        <activity android:name=".AddScheduleActivity" android:exported="true" />
+        <receiver android:name=".WorkoutNotificationReceiver" android:exported="false" />
     </application>
 
 </manifest>
