--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,11 @@
         <activity android:name=".ScheduleListActivity" android:exported="true" />
         <activity android:name=".AddScheduleActivity" android:exported="true" />
         <activity android:name=".WorkoutHistoryActivity" android:exported="true" />
+        <activity
+            android:name=".WorkoutResultsActivity"
+            android:exported="false"
+            android:label="Workout Results"
+            android:theme="@style/Theme.KeepYFitness" />
         <receiver android:name=".WorkoutNotificationReceiver" android:exported="false" />
     </application>
 
